# cmai

./: .env.template  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: release.yml
cmai/: main.py
cmai/cli/: app.py  session.py
cmai/cli/commands/: commit.py  config.py
cmai/cli/ui/: commit.py
cmai/config/: settings.py
cmai/core/: commit_spec.py  commit_validator.py  get_logger.py  logger_factory.py  normalizer.py
cmai/providers/: anthropic_provider.py  bailian_provider.py  base.py  ollama_provider.py  openai_provider.py  provider_factory.py  zai_provider.py
cmai/utils/: git_staged_analyzer.py
tests/: test_commit_validator.py  test_config_command.py  test_git_staged_analyzer.py  test_main_cli.py  test_normalizer_retry.py  test_session_output.py  test_settings.py
